# drone-ws-target-tracking-asio-cxx

./: CMakeLists.txt  README.md
protocol/: CMakeLists.txt
protocol/include/: protocol.hpp  retry.hpp
protocol/src/: protocol.cpp  retry.cpp
scripts/: gen-certs.sh
src/: main.cpp
svckit/include/: svc_addr_config.hpp
ws-client/: CMakeLists.txt
ws-client/include/: ws_client.hpp
ws-client/src/: main.cpp  ws_client.cpp
ws-server/: CMakeLists.txt
ws-server/include/: ws_server.hpp
ws-server/src/: main.cpp  ws_server.cpp
